--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <link rel="stylesheet" type="text/css" href="temp/styles/styles.css">
 </head>
 <body>
   <header>
@@ -15,8 +16,8 @@
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
         <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-      </ul>
+        <li><a href="#testimonials">Testimonial</a></li>        
+      </ul>      
     </nav>
   </header>
 
